# embedding_model

./: .gitignore  .pre-commit-config.yaml  DATA_PIPELINE.md  Makefile  PLAN.md  README.md  pyproject.toml
configs/: train.yaml
configs/callbacks/: default.yaml
configs/collator/: electra.yaml  mlm.yaml  mlm_wwm.yaml  span_corruption.yaml
configs/data/: fineweb_edu_100bt.yaml  fineweb_edu_10bt.yaml  fineweb_edu_350bt.yaml  flat_tokens.yaml  pretokenized.yaml
configs/model/: base.yaml
configs/task/: mlm.yaml
configs/tokenizer/: bert_base.yaml  bert_large.yaml  roberta_base.yaml
configs/training/: default.yaml
scripts/: evaluate.py  tokenize_fineweb.py  tokenize_fineweb_roberta.py  train.py  train_hf_baseline.py
src/embedding_trainer/: __init__.py
src/embedding_trainer/callbacks/: __init__.py  registry.py  simple_callbacks.py
src/embedding_trainer/core/: __init__.py  base_callback.py  base_model.py  base_task.py  base_trainer.py  precision.py  types.py
src/embedding_trainer/data/: __init__.py  base.py  loader.py  registry.py  sampler.py
src/embedding_trainer/eval/: __init__.py  base.py  model_loader.py  registry.py
src/embedding_trainer/model/: model.py  registry.py
tests/: __init__.py  test_data_pipeline.py  test_flat_tokens.py  test_model.py  test_model_init_weights.py  test_model_param_groups.py  test_tokenize_fineweb_roberta.py
tests/collators/: test_mlm.py
tests/data/: test_loader.py  test_sampler.py
tests/models/: test_model.py  test_model_pooling.py
tests/tasks/: test_mlm_task.py
tests/training/: test_trainer.py
(+21 files in other folders)
